[package]
name = "ch02-quickreplace"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
# Rust中版本到达了 1.0 以上的 crate 都遵循“语义版本”的规则：只要主版本号 1 不变，新
# 版本将是兼容之前版本的扩展。因此如果我们用例如 1.2 版本的 crate 测试成功，那么换成
# 版本 1.3、1.4 之后代码将仍然能够工作；但版本 2.0 将会引入不兼容的更改。当我们简单地
# 在 Cargo.toml 中把所需版本写为 1 时，Cargo 将会使用 2.0 之前的最新的可用版本
text-colorizer = "1"
